// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getAllTemplatesBySize given: size=medi when: getAllTemplatesBySize is called then: returns nano + mini + medi templates 1`] = `
[
  "0.wish.md",
  "refs/template.[feedback].v1.[given].by_human.md",
  "1.vision.stone",
  "1.vision.guard",
  "5.3.verification.stone",
  "5.3.verification.guard",
  "2.1.criteria.blackbox.stone",
  "2.1.criteria.blackbox.guard",
  "2.2.criteria.blackbox.matrix.stone",
  "3.1.3.research.internal.product.code.prod._.stone",
  "3.1.3.research.internal.product.code.test._.stone",
  "3.3.1.blueprint.product.stone",
  "3.3.1.blueprint.product.guard",
  "4.1.roadmap.stone",
  "5.1.execution.phase0_to_phaseN.stone",
  "5.1.execution.phase0_to_phaseN.guard",
  "2.3.criteria.blueprint.stone",
  "3.1.1.research.external.product.access._.stone",
  "3.1.1.research.external.product.claims._.stone",
  "3.1.5.research.reflection.product.premortem._.stone",
  "3.1.5.research.reflection.product.rootcause._.stone",
  "3.1.5.research.reflection.product.audience._.stone",
  "3.2.distill.repros.experience._.stone",
  "3.2.distill.repros.experience._.guard",
  "5.2.evaluation.stone",
  "5.2.evaluation.guard",
  "5.5.playtest.stone",
  "5.5.playtest.guard",
]
`;

exports[`getAllTemplatesBySize given: size=mega when: getAllTemplatesBySize is called then: returns all templates 1`] = `
[
  "0.wish.md",
  "refs/template.[feedback].v1.[given].by_human.md",
  "1.vision.stone",
  "1.vision.guard",
  "5.3.verification.stone",
  "5.3.verification.guard",
  "2.1.criteria.blackbox.stone",
  "2.1.criteria.blackbox.guard",
  "2.2.criteria.blackbox.matrix.stone",
  "3.1.3.research.internal.product.code.prod._.stone",
  "3.1.3.research.internal.product.code.test._.stone",
  "3.3.1.blueprint.product.stone",
  "3.3.1.blueprint.product.guard",
  "4.1.roadmap.stone",
  "5.1.execution.phase0_to_phaseN.stone",
  "5.1.execution.phase0_to_phaseN.guard",
  "2.3.criteria.blueprint.stone",
  "3.1.1.research.external.product.access._.stone",
  "3.1.1.research.external.product.claims._.stone",
  "3.1.5.research.reflection.product.premortem._.stone",
  "3.1.5.research.reflection.product.rootcause._.stone",
  "3.1.5.research.reflection.product.audience._.stone",
  "3.2.distill.repros.experience._.stone",
  "3.2.distill.repros.experience._.guard",
  "5.2.evaluation.stone",
  "5.2.evaluation.guard",
  "5.5.playtest.stone",
  "5.5.playtest.guard",
  "3.1.1.research.external.product.domain._.stone",
  "3.1.1.research.external.product.domain.terms.stone",
  "3.1.1.research.external.product.references._.stone",
  "3.1.2.research.external.factory.testloops._.stone",
  "3.1.2.research.external.factory.oss.levers._.stone",
  "3.1.2.research.external.factory.templates._.stone",
  "3.1.4.research.internal.factory.blockers._.stone",
  "3.1.4.research.internal.factory.opports._.stone",
  "3.2.distill.domain._.stone",
  "3.2.distill.domain._.guard",
  "3.2.distill.factory.upgrades._.stone",
  "3.3.0.blueprint.factory.stone",
]
`;

exports[`getAllTemplatesBySize given: size=mini when: getAllTemplatesBySize is called then: returns nano + mini templates 1`] = `
[
  "0.wish.md",
  "refs/template.[feedback].v1.[given].by_human.md",
  "1.vision.stone",
  "1.vision.guard",
  "5.3.verification.stone",
  "5.3.verification.guard",
  "2.1.criteria.blackbox.stone",
  "2.1.criteria.blackbox.guard",
  "2.2.criteria.blackbox.matrix.stone",
  "3.1.3.research.internal.product.code.prod._.stone",
  "3.1.3.research.internal.product.code.test._.stone",
  "3.3.1.blueprint.product.stone",
  "3.3.1.blueprint.product.guard",
  "4.1.roadmap.stone",
  "5.1.execution.phase0_to_phaseN.stone",
  "5.1.execution.phase0_to_phaseN.guard",
]
`;

exports[`getAllTemplatesBySize given: size=nano when: getAllTemplatesBySize is called then: returns only nano-level templates 1`] = `
[
  "0.wish.md",
  "refs/template.[feedback].v1.[given].by_human.md",
  "1.vision.stone",
  "1.vision.guard",
  "5.1.execution.from_vision.stone",
  "5.1.execution.from_vision.guard",
  "5.3.verification.stone",
  "5.3.verification.guard",
]
`;
